--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -39,5 +39,6 @@ v 0.6.4
 4. Glmnet ερμηνεία σημαντικότητας των αριθμητικών μεταβλητών.
 
 5. Διορθώσεις στα δέντρα.
+--> Done: Υπήρχε πρόβλημα στο prunning, όταν προέκυπτε δένδρο με 1 μόνο κόμβο. 
 
 6. Επιλογή μεταβλητών για το heatmap ( is.numeric ) [ δύναμικό checkbox ] 
